tests/errors/read_end_label_nonliteral_02.f90
program read_end_label_nonliteral_02
    implicit none
    integer :: x

    read (*, end=10.0) x
end program read_end_label_nonliteral_02
